mysql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tank
---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: tank
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  type: ClusterIP
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: tank
spec:
  selector:
    matchLabels:
      app:   mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:latest
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
