nginx-wp.yaml

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
  namespace: tank
spec:
  selector:
    app: nginx
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
  type: ClusterIP
status:
  loadBalancer: {}
---

apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: tank
  labels:
    app: wordpress
spec:
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
  selector:
    app: wordpress
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: tank
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 443
        volumeMounts:
        - name: nginx-cm
          mountPath: /etc/nginx/conf.d
        - name: secret-volume
          mountPath: /etc/nginx/ssl          
        - name: wpstorage
          mountPath: /var/www/html

      - image: wordpress:latest
        name: wordpress
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 128Mi
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: wpstorage
          mountPath: /var/www/html
      volumes:
      - name: wpstorage
        emptyDir: {}
      - name: nginx-cm
        configMap:
          name: nginxcm
      - name: secret-volume
        secret:
           secretName: ingress-tls
