postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tank
---

apiVersion: v1
kind: Service
metadata:
  name: wordpresspg
  namespace: tank
  labels:
    app: wordpresspg
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: wordpresspg
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpresspg
  namespace: tank
  labels:
    app: wordpresspg
spec:
  selector:
    matchLabels:
      app: wordpresspg    
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpresspg
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
          name:  wordpresspg
        volumeMounts:
        - name: pg-persistent-storage
          mountPath: /var/lib/postgres
      volumes:
      - name: pg-persistent-storage
        persistentVolumeClaim:
          claimName: pg-pv-claim
