minikube-ingress.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress
metadata:  
  name: nginx
  namespace: tank
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  labels:
    app: nginx
spec:  
  tls:
   - hosts:
     - it-tank.ru
     secretName: ingress-tls
  rules:
  - host: it-tank.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: nginx
             port: 
                number: 443
---
